project/test/semantics/unit/good/Good03_shouldEvaluateBinaryOperators.ty
singleton class BinaryOperators {
    
    actions: {
        main: () -> Int = {
            value x: Int = 5 * 2;
            5 - x * 3 + 2 * 9 / 3
        }
    }
}
